# guided-rocket-rs

./: Cargo.toml  README.md  build.sh  memory.x
.cargo/: config
src/: main.rs
