[package]
name = "guided-rocket-rs"
version = "0.1.0"
authors = ["Brandon Mittman <brandonmittman@gmail.com>"]
edition = "2018"

[dependencies]
embedded-hal = "*"
nb = {version = "*", features = ["unstable"]}
libm = "*"
cortex-m = "*"
heapless = {version = "*", features = ["const-fn"]}

[dependencies.arduino_mkrzero]
version = "*"
git = "https://github.com/djmcgill/atsamd21-rs"
features = ["rt", "panic_abort", "use_semihosting"]
