[package]
name = "guided-rocket-rs"
version = "0.1.0"
authors = ["Brandon Mittman <brandonmittman@gmail.com>"]
edition = "2018"

[dependencies]
embedded-hal = "*"
nb = {version = "*", features = ["unstable"]}
libm = "*"
cortex-m = "*"
heapless = {version = "*", features = ["const-fn"]}
embedded-sdmmc = { git = "https://github.com/thejpster/embedded-sdmmc-rs" }
mpu6050 = { git = "https://github.com/Big-B/mpu6050" }

[dependencies.arduino_mkrzero]
version = "*"
git = "https://github.com/atsamd-rs/atsamd"
features = ["rt", "panic_abort", "use_semihosting"]
